--- a/Handmade_fragrance/Views/Account/Register.cshtml
+++ b/Handmade_fragrance/Views/Account/Register.cshtml
@@ -1,32 +1,26 @@
 ﻿@model Handmade_fragrance.Models.RegisterViewModel
-@{
-    ViewBag.Title = "註冊";
-}
 
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>建立新帳戶。</h4>
-    <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = Html.DisplayNameFor(n => n.Email) })
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = Html.DisplayNameFor(n => n.Password) })
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = Html.DisplayNameFor(n => n.ConfirmPassword) })
         </div>
     </div>
     <div class="form-group">
@@ -34,6 +28,47 @@
             <input type="submit" class="btn btn-default" value="註冊" />
         </div>
     </div>
+
+
+    @*<div class="row">
+        <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 md-padding">
+            <h1 class="align-center">New Customer</h1>
+            <br>
+
+            <form class="join" action="index.php" method="post">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input type="text" name="name" value="" placeholder="First Name" required="" class="form-control" /><br>
+                        </div>
+                        <div class="col-sm-12">
+                            <input type="text" name="phone" value="" placeholder="Phone" required="" class="form-control" /><br>
+                        </div>
+                        <div class="col-sm-12">
+                            <input type="email" name="email" value="" placeholder="E-mail" required="" class="form-control" /><br>
+                        </div>
+                        <div class="col-sm-12">
+                            <input type="password" name="password" value="" placeholder="Password" required="" class="form-control" /><br>
+                        </div>
+                        <div class="col-sm-12">
+                            <input type="password" name="password-confirm" value="" placeholder="Confirm Password" required="" class="form-control" /><br>
+                        </div>
+                    </div>
+                </div>
+                <br>
+
+                <button type="submit" class="btn btn-primary">Join free</button>
+                <a href="#" class="xs-margin">Terms ></a>
+
+                <br><br>
+                <p>
+                    By creating an account you will be able to shop faster, be up to date on an order's status, and keep track of the orders you have previously made.
+                </p>
+            </form>
+
+            <br class="hidden-sm hidden-md hidden-lg">
+        </div>
+    </div>*@
 }
 
 @section Scripts {
